# Pog

./: .gitignore  README.md  description.txt  manifest.psd1  pog.psd1  setup.cmd  setup.ps1  shell.cmd  shell.ps1
.github/actions/build-pog-repository/: action.yml  build-remote-repo.ps1
.github/actions/install-pog/: action.yml  install-pog.ps1
.github/workflows/: TestPackageInstallation.ps1  UpdateReleaseAsset.ps1  build.yml
app/: Common.psm1  Paths.psm1  Pkg.psm1  Utils.psm1  header.ps1
app/Pkg/: Common.psm1  Invoke-Container.psm1  PSScriptAnalyzerSettings.psd1  Paths.psm1  Pkg.psd1  Pkg.psm1  Utils.Tests.ps1  Utils.psm1  VersionParser.Tests.ps1  VersionParser.psm1  header.ps1
app/Pkg/_knowledge/: dependencies.md  description.txt  features.md  github_api.txt  issues.md  naughty_packages.txt  other_projects.txt  todo.md  todo.txt
app/Pkg/container/: Common.psm1  Confirmations.psm1  Env_Enable.Tests.ps1  Env_Enable.psm1  Env_Install.psm1  Environment.psm1  container.ps1  setup_container.ps1
app/Pkg/lib/: Convert-CommandParametersToDynamic.psm1
app/Pkg/resources/: _readme.txt  manifest_template.psd1  manifest_template.txt  manifest_template_direct.psd1
app/Pog/: Common.psm1  Confirmations.psm1  Invoke-Container.psm1  LoadPogDll.ps1  PSScriptAnalyzerSettings.psd1  Paths.psm1  Pog.Format.ps1xml  Pog.psd1  Pog.psm1  Utils.Tests.ps1  Utils.psm1  about_Pog.help.txt  about_PogEnable.help.txt  header.ps1
app/Pog.Utils/: LoadPogDll.ps1  Pog.Utils.psd1
app/Pog/_knowledge/: Exports v2.md  Pog self-update.txt  Unattended install - switches.url  Unattended installer switches.txt  config modifications.md  dependencies.md  description.txt  exporting commands and shortcuts.md  github package generators.txt  github_api.txt  issues.md  naughty packages.txt  notes from project report.md  other projects.txt  packages that reasonably separate data and config.txt  python portable.md  remote repository.txt  shim executables.txt  stub executables.txt  todo.md  wrapping other package managers.txt
app/Pog/_random_scripts/: add_packages_to_repo.ps1  add_version_dirs.ps1  list_private_repo_packages.ps1
app/Pog/_scripts/: add an icon to a package directory using Desktop.ini.ps1  build remote repo from local.ps1  convert direct package to templated.ps1  create map from AppID to descriptions through CLSID.ps1  list repository packages with broken download URL.ps1  manual-test.ps1  package manager install scripts.ps1  update changed packages.ps1  update out-of-date packages.ps1  update packages with modified manifests.ps1  update vc redist.ps1  vcredist-copy.ps1  vcredist-download.ps1
app/Pog/container/: Confirmations.psm1  Env_Disable.psm1  Env_Enable.Tests.ps1  Env_Enable.psm1  Env_GetInstallHash.psm1  Env_Install.psm1  (+7 more)
app/Pog/lib_compiled/PogNative/: CMakeLists.txt  StubData.hpp  pog_stub.cpp  util.hpp
app/Pog/lib_compiled/PogNative/lib/: PogNative.cpp  PogNative.h  resource_lib.hpp  util.hpp
app/Pog/lib_compiled/PogNative/src/: ShimData.hpp  StubData.hpp  pog_shim.cpp  pog_stub.cpp  stdlib.cpp  stdlib.hpp  util.hpp
app/command_generator/: SubstituteExe.psm1
app/container/: Configure.psm1  Env.psm1  container.ps1  setup_container.ps1
app/resources/: manifest_template.psd1
(+361 files in other folders)
